<resources>
    <string name="app_name">Wumpus World Game</string>
    <string name="hero_side_title">Hero Side</string>
    <string name="wumpus_side_title">Wumpus Side</string>
    <string name="game_info_title">Game Information</string>
    <string name="game_settings_title">Settings</string>
    <string name="main_tutorial_title">Tutorial : Your Tale</string>
    <string name="main_tutorial_controls_title">Tutorial : Controls</string>
    <string name="score_title">Ranking</string>
    <string name="ItemGameInfo">Information</string>
    <string name="ItemTutorial">Tutorial</string>
    <string name="ItemSettings">Settings</string>
    <string name="ItemScore">Ranking</string>
    <string name="hero_mode_tutorial_title">Hero : How to play</string>
    <string name="wumpus_mode_tutorial_title">Wumpus : How to play</string>
    <string name="ItemNewGame">New Game</string>
    <string name="ItemSolveGame">Automatic player</string>
    <string name="ItemGameTutorial">Game Controls</string>
    <string name="game_title">Hunt the Wumpus...or not?</string>
    <string name="game_intro">Hi...iiiiiih...Uh... Hello!
        \n\nYou have been carried in the Wumpus\' world, a dark and dangerous place...
        \nDo you want to test yourself?
        \nAre you looking for glory and richness?
        \nWill you find out where the monster is and steal its treasures?
        \nWill you capable of survive his anger?
        \n\nOr wait...Are you the creature that is been chased by the hunter?Yep, it is you!
        \nWill you protect your lair? \nWill survive the hunt?
        \n\nThe choice is yours…
        \n\nExperience history as it has already been written or live into the world of the Wumpus
            that now is upside down!</string>
    <string name="hero">HERO</string>
    <string name="hero_text">Here you are! Let\'s go on adventure, brave hero!</string>
    <string name="wumpus">WUMPUS</string>
    <string name="wumpus_text"> Here you are! Hurry up, poor Wumpus, run away!</string>
    <string name="game_info">Inspired by \"<b>Hunt the Wumpus</b>\" video game,
        created by <b>Gregory Yob</b>, this game app realizes two game modes,
        so, my dear player, you can impersonate
        a brave adventurer, or a mysterious creature.
        \n\nIf you\'ll be in the shoes of the <b>Adventurer</b>,
        you should avoid to fall into the ditches, to be devoured by the monster
        and also to find out its immense treasure!
        \n\nInstead, if you are the mysterious <b>Wumpus</b>,
        the creature\'s hiding in the depths of the gloomy forest,
        you should run away from the hunter who is hard on your heels,
        avoiding his traps and find out the secret passage
        that will lead you to salvation.
        \n\nBy the way, whether you are the Wumpus or the Adventurer, enjoy yourself!
        \n\nUh, I\'ve almost forgot ...
        \nIf you\'re lazy enough to gain the \"High Armchair Award\"
        let me play for you using automatic game mode!
    </string>
    <string name="game_credits">It\'s me, Ivonne! I\'ve tried to develop this game...</string>
    <string name="loading">Loading game data ...</string>
    <string name="loading_image">loading bat image</string>
    <string name="score">Your score: </string>
    <string name="score_value">0</string>
    <string name="shot">Remaining shots: </string>
    <string name="shots_value">1</string>
    <string name="game_message_intro">Let\'s go</string>
    <string name="tutorial_intro">First of all choose your Playable Character!</string>
    <string name="hero_description">Will you be a brave adventurer, who will kill the terrible monster living in the dark forest?</string>
    <string name="hero_mode_intro">Yeah, it\'s me, the story\'s hero.</string>
    <string name="hero_danger_intro">Avoid falling into the treacherous ditches,  scattered in the woods,</string>
    <string name="hero_mission_intro">fulfill your destiny, killing the terrible monster, shooting an arrow</string>
    <string name="hero_award_intro">as soon as you can feel the stench and steal its sparkling treasure!</string>
    <string name="wumpus_description">Or the mysterious creature hiding in the woods to flee from the cruel hunter?</string>
    <string name="wumpus_mode_intro">Grrr, it\'s me, the hunted Wumpus.</string>
    <string name="wumpus_danger_intro">Dodge the traps hidden by piles of leaves,</string>
    <string name="wumpus_mission_intro">try to hit the hunter with a boulder when he is close to you</string>
    <string name="wumpus_award_intro">or run away before he reaches you!</string>
    <string name="next">next</string>
    <string name="tutorial2_title">Here there are the game controls!</string>
    <string name="tutorial2_intro">This is your control pad:</string>
    <string name="controls_description">You can move around the map one square at a time.
         \nChoose the direction you want to go by pressing one of the arrows.</string>
    <string name="controls_intro">Explore the playing field, moving your self by directional keys:</string>
    <string name="up_down_control_description">Use these two arrows to move UP or DOWN.</string>
    <string name="left_right_control_description">Use the LEFT and RIGHT arrows to move in these directions.</string>
    <string name="hit_description">Use this button to try to hit, then choose the direction where you think there\'s the enemy!</string>
    <string name="suggest_description">As and when you\'re exploring the map, some hints\'ll appear to give you information about the surrounding environment.
        Pay attention!</string>
    <string name="back">back</string>
    <string name="top_score_title">High Score</string>
    <string name="top_player_title">Player\'s name :</string>
    <string name="top_player_name">---</string>
    <string name="top_ten">Top Ten</string>
    <string name="top_ten_list">[ ... ]</string>
    <string name="top_ten_subtitle">Ten best scores ranking...</string>
    <string name="current_score_title">Current Score</string>
    <string name="current_score_value">---</string>
    <string name="points">Points : </string>
    <string name="score_value_title">Score : </string>
    <string name="top_score_value">---</string>
    <string name="share">Share</string>
    <string name="share_score_title">Share your score!</string>
    <string name="record_share_message">Hey, challenge your friends to Wumpus World Game!
         \nWill they be able to beat your high score?\nHere there\'s your best score:\n</string>
    <string name="record_send_message">Hey, are you able to beat my record at Wumpus World Game?
         \nThis is my best score:\n</string>
    <string name="score_share_message">Hey, challenge your friends to Wumpus World Game!
         \n\nHere\'s your score:\n</string>
    <string name="score_send_message">Hey, challenge me to Wumpus World Game!
         \nThis is my score:\n</string>
    <string name="general_settings">General</string>
    <string name="sound_effects">Sound effects</string>
    <string name="enable_sounds">enabled sounds</string>
    <string name="disable_sounds">disable sounds</string>
    <string name="player_name">Player\'s name</string>
    <string name="player_info">Set your nickname for the ranking table!</string>
    <string name="data_sync"><![CDATA[Data & Sync]]></string>
    <string name="import_data">Import game data</string>
    <string name="export_data">Export game data</string>
    <string name="delete_data">Delete game data</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="delete_data_title">Deleting game data</string>
    <string name="delete_data_request">Do you really want to delete all game data? You\'ll lose your score ranking</string>
    <string name="export_data_title">Exporting game data</string>
    <string name="export_data_request">Do you really want to export your game data and store it somewhere in the Universe?</string>
    <string name="import_data_title">Importing game data</string>
    <string name="import_data_request">Do you want to upload a previous version of your game data and restore your score ranking?
        \nBe careful, you\'ll lose the current one!</string>
    <string name="invalid_score_file">Score file you\'ve entered is invalid.
        \nNo changes\'ve been made</string>
    <string name="valid_score_file">Score rank\'s been updated!</string>
    <string name="team">Team</string>
    <string name="team_info">I\'m Ivonne and this is my first app :)
        \nThanks to Ciociò, my special beta tester!:3
        \nThanks to Lula and Dady for precious advices!
        \nSounds and images are taken from
        https://opengameart.org</string>
    <string name="feed">Feedback</string>
    <string name="feedback_info">Report technical issues or suggest new features!</string>
    <string name="feedback_request">Do you want to send your feedback?</string>
    <string name="cancel">cancel</string>
    <string name="confirm">confirm</string>
    <string name="email_subject">WUMPUS WORLD GAME application feedback</string>
    <string name="hero_tutorial_intro">There you are, brave adventurer!</string>
    <string name="hero_mode_description">Here we are, you\'re going to the dark forest
         looking for Wumpus treasures ... You will be able to defeat
         this terrible monster?</string>
    <string name="controls_title">Game controls</string>
    <string name="controls_summary">Use the directional keys (arrows) to move around the playground
        and the central button to hit the monster, choosing the direction
        in which to shoot your arrow.</string>
    <string name="hero_play_description">
        Please, be careful! Don\'t fall into the ditches,
        avoid dead-end paths and don\'t get killed by Wumpus.
    </string>
    <string name="wumpus_tutorial_intro">There you are, mysterious creature!</string>
    <string name="wumpus_mode_description">Some rustles, noise and broken branches ...
         Someone is hunting you, poor Wumpus. \nHurry up, get away from here!
    </string>
    <string name="wumpus_play_description">
        Remember this... Don\'t get trapped, find a way that
        will lead you to salvation and if you can,
        kill the hunter who is chasing you.
    </string>
    <string name="hero_game_intro">\nHunt the Wumpus and take its treasure</string>
    <string name="hero_enemy">Ouch ouch, the Wumpus hurts you!</string>
    <string name="hero_award">You \'ve found Wumpus\' treasure!</string>
    <string name="hero_danger">You fell into the pit full of water ...</string>
    <string name="hero_enemy_sense">Puff! What a stink ... The monster should be nearby!</string>
    <string name="hero_danger_sense">Brrr, what a cold air\'s coming ...</string>
    <string name="wumpus_game_intro">Welcome Wumpus!\nEscape as fast as you can.</string>
    <string name="wumpus_enemy">Oh no,the hunter\'s hit you!</string>
    <string name="wumpus_award">You\'ve found a way out, hurry up!</string>
    <string name="wumpus_danger">You were trapped...</string>
    <string name="hero_icon">image of hero pg</string>
    <string name="wumpus_icon">image of wumpus pg</string>
    <string name="gold_image">image of gold</string>
    <string name="arch_image">image of balestr</string>
    <string name="pit_image">pit image about hero danger</string>
    <string name="trap_image">trap image about wumpus danger</string>
    <string name="stone_image">image of a stone</string>
    <string name="exit_image">exit image about wumpus award</string>
    <string name="hit_button">hit button icon</string>
    <string name="left_button">left button icon</string>
    <string name="up_button">up button icon</string>
    <string name="right_button">right button icon</string>
    <string name="down_button">down button icon</string>
</resources>