<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/general_settings"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true">

        <SwitchPreference
            android:id="@+id/sound_switch"
            android:defaultValue="false"
            android:key="sound"
            android:title="@string/sound_effects"
            android:summaryOn="@string/enable_sounds"
            android:summaryOff="@string/disable_sounds"/>

        <EditTextPreference
            android:key="player"
            android:selectAllOnFocus="true"
            android:title="@string/player_name"
            app:enableCopying="true"
            android:summary="@string/player_info"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/data_sync">

        <Preference
            android:title="@string/import_data"
            android:key="data import"/>

        <Preference
            android:title="@string/export_data"
            android:key="data export_data"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="About">

        <Preference
            android:title="@string/feed"
            android:key="feed"
            android:summary="@string/feedback_info"/>

    </PreferenceCategory>


</PreferenceScreen>
